remove unwanted files and added terraform

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 # Ignore secret keys file
 terraform.tfvars
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
